# lib/api-spec/openapi.yaml
@@ -797,6 +797,8 @@ components:
           nullable: true
         hasSetUsername:
           type: boolean
+        profileTemplate:
+          type: string
         createdAt:
           type: string
           format: date-time
@@ -810,6 +812,7 @@ components:
         - allowReplyNotif
         - linkOpens
         - hasSetUsername
+        - profileTemplate
         - createdAt
 
     PublicProfile:
@@ -848,6 +851,8 @@ components:
           type: boolean
         allowReplyNotif:
           type: boolean
+        profileTemplate:
+          type: string
         publicMessages:
           type: array
           items:
@@ -856,6 +861,7 @@ components:
         - username
         - isPremium
         - allowReplyNotif
+        - profileTemplate
         - publicMessages
 
     PublicMessage:
@@ -950,6 +956,8 @@ components:
         socialLinkedin:
           type: string
           nullable: true
+        profileTemplate:
+          type: string
 
     Message:
       type: object
